--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
         <mail.api.version>1.6.2</mail.api.version>
         <websocket.api.version>1.1</websocket.api.version>
         <inject.api.version>1</inject.api.version>
+        <batch.api.version>1.0.1</batch.api.version>
 
         <guava.version>28.1-jre</guava.version>
         <orika.version>1.5.4</orika.version>
@@ -339,6 +340,11 @@
                 <groupId>javax.inject</groupId>
                 <artifactId>javax.inject</artifactId>
                 <version>${inject.api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.batch</groupId>
+                <artifactId>javax.batch-api</artifactId>
+                <version>${batch.api.version}</version>
             </dependency>
             <!-- Guava -->
             <dependency>
